--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "declaration": false,
+    "declaration": true,
+    "outDir": "dist",
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
@@ -16,6 +17,9 @@
       "@jobber/atlantis/*": ["components/*"],
     }
   },
+  "include": [
+    "src/components/**/*"
+  ],
   "exclude": [
     "**/*.spec.ts",
     "node_modules"
