PR comment fixings.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,7 @@
     "sourceMap": true,
     "target": "es5",
     "jsx": "react",
-    "baseUrl": "src/",
-    "paths": {
-      "@jobber/atlantis/*": ["components/*"],
-    }
+    "baseUrl": "src/"
   },
   "include": [
     "src/components/**/*"
