--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,7 @@
 {
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "outDir": "dist",
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
-    "module": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "target": "es5",
-    "jsx": "react",
-    "baseUrl": "src/"
-  },
-  "include": [
-    "src/components/**/*"
-  ],
-  "exclude": [
-    "**/*.spec.ts",
-    "node_modules"
-  ],
-  "compileOnSave": false
+  "files": [],
+  "include": [],
+  "references": [
+    { "path": "packages/components" }
+  ]
 }
