--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -2,12 +2,15 @@
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
     "outDir": "dist",
+    "typeRoots": [
+      "./types"
+    ]
   },
   "include": [
-    "TextField/*"
+    "TextField/*",
+    "types/**/*"
   ],
   "files": [
-    "index.ts",
-    "styles.d.ts"
+    "index.ts"
   ]
 }
