--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -8,6 +8,7 @@
     "prepublishOnly": "tsc -b ."
   },
   "peerDependencies": {
+    "postcss": "^7.0.5",
     "postcss-modules": "^1.4.1",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
@@ -17,6 +18,7 @@
     "@types/classnames": "^2.2.6",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "postcss": "^7.0.5",
     "postcss-modules": "^1.4.1",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
