--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "url": "https://github.com/GetJobber/atlantis/issues"
   },
   "homepage": "https://github.com/GetJobber/atlantis#readme",
-  "dependencies": {
-    "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
+  "peerDependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "typescript": "^3.1.3"
@@ -35,6 +33,8 @@
   ],
   "devDependencies": {
     "@types/jest": "^23.3.5",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "buble": "^0.19.4",
     "docz": "^0.12.5",
     "jest": "^23.6.0",
