--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
     "jobber-tslint-foundation": "git+ssh://git@github.com/GetJobber/Jobber-TSLint-Foundation.git#v0.0.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
-    "tslint-react": "^3.6.0"
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.3"
   }
 }
