Move tslint config into monorepo

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -6,11 +6,8 @@
       "./types"
     ]
   },
-  "include": [
-    "TextField/*",
-    "types/**/*"
-  ],
-  "files": [
-    "index.ts"
+  "exclude": [
+    "./dist/**/*",
+    "./__tests__"
   ]
 }
