--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start": "docz dev",
     "build": "tsc -b .",
     "build:clean": "tsc -b . --clean",
-    "lint": "tslint --project tsconfig.json ./packages/\\{,**/\\}*.{ts,tsx}",
-    "lint:fix": "tslint --project tsconfig.json --fix ./packages/\\{,**/\\}*.{ts,tsx}",
+    "lint": "tslint --project tsconfig.lint.json --format stylish",
+    "lint:fix": "tslint --project tsconfig.lint.json --fix",
     "fix": "yarn lint:fix"
   },
   "author": "",
@@ -31,7 +31,6 @@
     "postcss-modules": "^1.4.1",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
-    "jobber-tslint-foundation": "git+ssh://git@github.com/GetJobber/Jobber-TSLint-Foundation.git#v0.0.1",
     "prettier": "1.14.3",
     "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
