--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -21,7 +21,6 @@
     "postcss": "^7.0.5",
     "postcss-modules": "^1.4.1",
     "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "typescript": "^3.1.6"
+    "react-dom": "^16.7.0-alpha.0"
   }
 }
