--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -18,6 +18,7 @@
     "@types/classnames": "^2.2.6",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "classnames": "^2.2.6",
     "postcss": "^7.0.5",
     "postcss-modules": "^1.4.1",
     "react": "^16.7.0-alpha.0",
