--- a/packages/jobber-tslint-foundation/package.json
+++ b/packages/jobber-tslint-foundation/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "prettier": "^1.15.1",
     "tslint": "^5.11.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.1.6"
   },
   "peerDependencies": {
