--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build:clean": "tsc -b . --clean",
     "lint": "tslint --project tsconfig.lint.json --format stylish",
     "lint:fix": "tslint --project tsconfig.lint.json --fix",
+    "lint:css": "stylelint  packages/**/*.css",
+    "fix:css": "yarn lint:css --fix",
     "fix": "yarn lint:fix",
     "docs:build": "docz build"
   },
@@ -26,13 +28,16 @@
     "@types/jest": "^23.3.9",
     "docz": "^0.12.9",
     "docz-plugin-css": "^0.11.0",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "postcss": "^7.0.5",
-    "postcss-modules": "^1.4.1",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
+    "postcss": "^7.0.5",
+    "postcss-modules": "^1.4.1",
     "prettier": "1.14.3",
+    "react": "^16.7.0-alpha.0",
+    "react-dom": "^16.7.0-alpha.0",
+    "stylelint": "^9.7.1",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^1.0.0",
     "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
