--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -16,6 +16,7 @@
     "typescript": "^3.1.6"
   },
   "devDependencies": {
+    "@atlantis/icons": "^1.0.0",
     "@types/classnames": "^2.2.6",
     "@types/react": "^16.7.3",
     "@types/react-dom": "^16.0.9",
