Move colors into own package

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "extends": "../../tsconfig.settings.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "typeRoots": [
-      "./types"
-    ]
+    "outDir": "dist"
   },
   "exclude": [
     "./dist/**/*",
     "./__tests__"
   ],
-  "references": [
-    "../icons"
+  "references": [{
+      "path": "../icons"
+    },
+    {
+      "path": "../styles"
+    }
   ]
 }
