--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@atlantis/icons": "^1.0.0",
+    "@atlantis/styles": "^1.0.0",
     "@types/classnames": "^2.2.6",
     "@types/react": "^16.7.3",
     "@types/react-dom": "^16.0.9",
