--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:clean": "tsc -b . --clean",
     "lint": "tslint --project tsconfig.lint.json --format stylish",
     "lint:fix": "tslint --project tsconfig.lint.json --fix",
-    "lint:css": "stylelint  packages/**/*.css",
+    "lint:css": "stylelint 'packages/**/*.css'",
     "fix:css": "yarn lint:css --fix",
     "fix": "yarn lint:fix",
     "docs:build": "docz build"
@@ -26,21 +26,23 @@
   "homepage": "https://github.com/GetJobber/atlantis#readme",
   "devDependencies": {
     "@types/jest": "^23.3.9",
-    "docz": "^0.12.9",
+    "docz": "^0.12.15",
     "docz-plugin-css": "^0.11.0",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
-    "postcss": "^7.0.5",
+    "postcss": "^7.0.6",
     "postcss-modules": "^1.4.1",
-    "prettier": "1.14.3",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
+    "postcss-preset-env": "^6.4.0",
+    "prettier": "1.15.1",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "stylelint": "^9.7.1",
+    "stylelint-config-css-modules": "^1.3.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^1.0.0",
     "ts-jest": "^23.10.4",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.2.1"
   }
 }
