--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,22 +9,24 @@
     "prepublishOnly": "tsc -b ."
   },
   "peerDependencies": {
-    "postcss": "^7.0.5",
+    "postcss": "^7.0.6",
     "postcss-modules": "^1.4.1",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "typescript": "^3.1.6"
+    "postcss-preset-env": "^6.4.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "typescript": "^3.2.1"
   },
   "devDependencies": {
     "@atlantis/icons": "^1.0.0",
     "@atlantis/styles": "^1.0.0",
     "@types/classnames": "^2.2.6",
-    "@types/react": "^16.7.3",
-    "@types/react-dom": "^16.0.9",
+    "@types/react": "^16.7.13",
+    "@types/react-dom": "^16.0.11",
     "classnames": "^2.2.6",
-    "postcss": "^7.0.5",
+    "postcss": "^7.0.6",
     "postcss-modules": "^1.4.1",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0"
+    "postcss-preset-env": "^6.4.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2"
   }
 }
