Add `nodemon` to watch files and recompile during development

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "atlantis",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "npm run lint && jest",
     "start": "docz dev",
+    "start:watch": "nodemon",
     "build": "tsc --project .",
     "build:clean": "rm -rf dist",
     "jest": "jest",
@@ -39,6 +39,7 @@
     "docz": "^0.12.5",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
+    "nodemon": "^1.18.9",
     "prettier": "^1.15.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
