--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   ],
   "scripts": {
     "start": "docz dev",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx . --fix"
+    "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "lint:css": "stylelint 'packages/**/*.css'",
+    "lint": "yarn lint:js && yarn lint:css",
+    "lint:fix": "yarn lint:js --fix && yarn lint:css --fix"
   },
   "repository": {
     "type": "git",
@@ -35,6 +37,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "style-loader": "^0.23.1",
+    "stylelint": "^10.0.1",
+    "stylelint-config-css-modules": "^1.4.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-order": "^3.0.0",
     "typed-css-modules-loader": "^0.0.17",
     "typescript": "^3.4.3"
   }
