--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.8.6",
     "style-loader": "^0.23.1",
     "stylelint": "^10.0.1",
+    "stylelint-color-format": "^0.2.0",
     "stylelint-config-css-modules": "^1.4.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.0.0",
