--- a/package.json
+++ b/package.json
@@ -35,16 +35,11 @@
     "jest": "^24.7.1",
     "postcss": "^7.0.14",
     "postcss-loader": "^3.0.0",
+    "prettier": "^1.17.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "style-loader": "^0.23.1",
     "stylelint": "^10.0.1",
-    "stylelint-color-format": "^0.2.0",
-    "stylelint-config-css-modules": "^1.4.0",
-    "stylelint-config-standard": "^18.3.0",
-    "stylelint-declaration-block-no-ignored-properties": "^2.0.0",
-    "stylelint-order": "^3.0.0",
-    "stylelint-prettier": "^1.0.6",
     "typed-css-modules-loader": "^0.0.17",
     "typescript": "^3.4.3"
   }
