--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,10 +8,10 @@
     "@typescript-eslint/parser": "^1.6.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.17.0"
   },
   "peerDependencies": {
-    "eslint": "^5.16.0",
-    "prettier": "^1.17.0"
+    "eslint": "^5.16.0"
   }
 }
