--- a/package.json
+++ b/package.json
@@ -24,20 +24,24 @@
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/react-test-renderer": "^16.8.1",
     "css-loader": "^2.1.1",
     "docz": "^1.0.0",
     "docz-theme-default": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-jest": "^22.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
     "postcss": "^7.0.14",
     "postcss-loader": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.8.6",
     "style-loader": "^0.23.1",
     "stylelint": "^10.0.1",
     "typed-css-modules-loader": "^0.0.17",
