Add command to notify github of docs url

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,6 +129,16 @@ jobs:
             --acl public-read \
             --cache-control "max-age=86400" \
             --delete
+      - run:
+          name: Notify github
+          command: |
+            DOCS_S3_PREFIX="http://${ATLANTIS_S3_BUCKET}.s3-website-us-east-1.amazonaws.com"
+            DOCS_S3_URL="${DOCS_S3_PREFIX}/${CIRCLE_SHA1}"
+            PULL_REQUEST_NUMBER=${CIRCLE_PULL_REQUEST##*/}
+            COMMENTS_URL="https://api.github.com/repos/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/issues/${PULL_REQUEST_NUMBER}/comments"
+            curl -s -H "Authorization: token ${ATLANTIS_GITHUB_DOCS_DEPLOY_TOKEN}" \
+              -X POST -d "{\"body\": \"Hi frend. Here's a preview of the docs ${DOCS_S3_URL}\"}" \
+              $COMMENTS_URL
 workflows:
   version: 2
 
