--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -6,6 +6,7 @@
     "dist/**/*"
   ],
   "dependencies": {
+    "@jobber/formatters": "^0.0.1",
     "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
