--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jobber/eslint-config",
-  "version": "0.0.1",
+  "version": "0.0.1-pre.1",
   "main": ".eslintrc.js",
-  "private": true,
+  "license": "UNLICENSED",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
