--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -1,10 +1,18 @@
 {
   "name": "@jobber/formatters",
-  "version": "0.0.1",
-  "license": "",
-  "main": "index.ts",
-  "dependencies": {
-    "typescript": "^3.4.3"
+  "version": "0.0.1-pre.7",
+  "license": "UNLICENSED",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc --project .",
+    "clean": "rm -rf dist/* tsconfig.tsbuildinfo",
+    "prepare": "npm run clean; npm run build"
   },
-  "devDependencies": {}
+  "files": [
+    "dist/*"
+  ],
+  "devDependencies": {
+    "typescript": "^3.4.5"
+  }
 }
