--- a/packages/formatters/tsconfig.json
+++ b/packages/formatters/tsconfig.json
@@ -1,8 +1,10 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "lib": ["dom", "es2018"],
     "rootDir": "src",
     "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["src/**/*"],
+  "files": ["src/index.ts"]
 }
