--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,8 +1,12 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "lib": ["dom", "es2018"],
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "dist"
   },
-  "include": ["src"]
+  // "include": ["src/**/*"],
+  // "files": ["src/*/index.ts"],
+  "include": ["src/**/*"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
 }
