--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@jobber/*": ["./packages/*/src"]
-    }
-  },
-  "files": [],
-  "references": [{ "path": "packages/components" }]
+    "baseUrl": "."
+    // "paths": {
+    //   "@jobber/*": ["./packages/*/src"]
+    // }
+  }
+  // "files": [],
+  // "references": [{ "path": "packages/components" }]
 }
