Add basic storybook setup

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint:css": "stylelint 'packages/**/*.css' --allow-empty-input",
     "lint:markdown": "prettier --check '**/*.md'",
     "lint": "yarn lint:js && yarn lint:css",
-    "lint:fix": "yarn lint:js --fix && yarn lint:css --fix && yarn lint:markdown --write"
+    "lint:fix": "yarn lint:js --fix && yarn lint:css --fix && yarn lint:markdown --write",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -28,9 +30,15 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-info": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/storybook__react": "^4.0.1",
+    "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "docz": "^1.0.0",
     "docz-theme-default": "^1.0.0",
@@ -42,6 +50,7 @@
     "postcss": "^7.0.14",
     "postcss-loader": "^3.0.0",
     "react": "^16.8.6",
+    "react-docgen-typescript-loader": "^3.1.0",
     "react-dom": "^16.8.6",
     "style-loader": "^0.23.1",
     "stylelint": "^10.0.1",
