--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.8.1",
+    "@storybook/react": "^5.0.11",
     "react-test-renderer": "^16.8.6"
   }
 }
