--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "lib": ["dom", "es2018"],
     "jsx": "react",
+    "declaration": true,
     "rootDir": "src",
     "outDir": "dist"
   },
