--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,12 +26,20 @@
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.8.1",
+    "autoprefixer": "^9.5.1",
     "copyfiles": "^2.1.0",
+    "postcss": "^7.0.16",
+    "postcss-import": "^12.0.1",
     "react-test-renderer": "^16.8.6",
     "rollup": "^1.11.3",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-typescript2": "^0.21.0",
     "typescript": "^3.4.5"
-  }
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "IE 10"
+  ]
 }
