--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-jest": "^22.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
+    "lerna": "^3.13.4",
     "postcss": "^7.0.14",
     "postcss-loader": "^3.0.0",
     "react": "^16.8.6",
