--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,9 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npm run build:tsc:deploy && npm run build:rollup",
+    "build": "npm run build:rollup",
     "build:rollup": "rollup --config",
-    "build:tsc:deploy": "tsc --project . --emitDeclarationOnly",
     "build:assets": "copyfiles --up 1 'src/**/*.css' dist/",
     "clean": "rm -rf dist/* tsconfig.tsbuildinfo",
     "prepare": "npm run clean; npm run build"
@@ -16,7 +15,7 @@
     "dist/*"
   ],
   "dependencies": {
-    "@jobber/formatters": "0.0.1-pre.6",
+    "@jobber/formatters": "0.0.1-pre.7",
     "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
@@ -32,6 +31,9 @@
     "postcss-import": "^12.0.1",
     "react-test-renderer": "^16.8.6",
     "rollup": "^1.11.3",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-multi-input": "^0.2.2",
+    "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-typescript2": "^0.21.0",
