--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
     <<: *container_config
     steps:
       - *restore_repo
-      *restore_npm_cache
+      <<: *restore_npm_cache
       - *npm_install
       - run:
           name: Sum Lockfiles
@@ -60,7 +60,7 @@ jobs:
     <<: *container_config
     steps:
       - *restore_repo
-      *restore_npm_cache
+      <<: *restore_npm_cache
       - *npm_install
       - run: npm run lint:js -- --format junit -o reports/junit/js-lint-results.xml
       - store_test_results:
@@ -72,7 +72,7 @@ jobs:
     <<: *container_config
     steps:
       - *restore_repo
-      *restore_npm_cache
+      <<: *restore_npm_cache
       - *npm_install
       - run: mkdir -p reports/junit
       - run: npm run lint:css -- --custom-formatter node_modules/stylelint-junit-formatter > reports/junit/css-lint-results.xml
@@ -103,7 +103,7 @@ jobs:
     <<: *container_config
     steps:
       - *restore_repo
-      *restore_npm_cache
+      <<: *restore_npm_cache
       - *npm_install
       - run: npm run build
       - store_artifacts:
